:construction: FEAT: Add header

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,16 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": ["node"]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.vue",
+  ],
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
