--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@mdi/js": "^7.4.47",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.4"
   },
