:building_construction: Configure express js

--- a/package.json
+++ b/package.json
@@ -4,28 +4,32 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "dev:frontend": "vite",
+    "dev:backend": "node src/backend/server.cjs",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "build:frontend": "vue-tsc -b && vite build",
+    "build": "npm run build:frontend",
+    "preview": "vite preview",
+    "start": "node src/backend/server.cjs"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@mdi/js": "^7.4.47",
+    "express": "^4.21.2",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.4"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
-    "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "eslint": "^9.15.0",
     "eslint-plugin-vue": "^9.31.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vue": "^3.5.13",
     "vue-tsc": "^2.1.8"
