--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@mdi/js": "^7.4.47",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "pg": "^8.13.1",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.4"
   },
