--- a/sample.env
+++ b/sample.env
@@ -3,3 +3,4 @@ DB_PASSWORD=mypassword
 DB_NAME=mydatabase
 DB_HOST=localhost
 DB_PORT=5433
+DATABASE_URL=postgresql://myuser:mypassword@localhost:5433/mydatabase
