--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm run build:frontend",
     "preview": "vite preview",
     "start": "node src/backend/server.cjs",
-    "migrate": "node-pg-migrate --migrations-dir src/backend/migrations"
+    "migrate": "node src/convert-migrations.js && node-pg-migrate --migrations-dir src/backend/migrations",
+    "convert-migrations": "node src/convert-migrations.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
