--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
+    "transbank-sdk": "^5.0.0",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.4"
   },
